<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_ingredients_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:background="@drawable/selector_recipe_steps_background">
    </android.support.v7.widget.RecyclerView>

<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_steps_recyclerView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3">
</android.support.v7.widget.RecyclerView>
</LinearLayout>
